# dlt-quickbooks

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.dlt/: secrets.toml.example
.github/workflows/: ci.yml
docs/: upstream-issue.md
sources/: quickbooks_pipeline.py
sources/quickbooks/: __init__.py  requirements.txt  settings.py
sources/quickbooks/helpers/: __init__.py  auth.py  cdc.py  files.py  paginator.py  reports.py
tests/: utils.py
tests/quickbooks/: test_auth.py  test_cdc.py  test_files.py  test_paginator.py  test_payments.py  test_reports_flatten.py  test_source_live.py
